# data_scraping

./: active_company_officers.csv  active_company_officers_with_company_names.csv  active_company_officers_with_company_names_2.csv  active_company_officers_with_company_names_sample.csv  company_data.csv  function_output.txt  pyproject.toml
